--- a/src/app/componentes/carrera/carrera.component.html
+++ b/src/app/componentes/carrera/carrera.component.html
@@ -1,11 +1,11 @@
 <app-sidevar></app-sidevar>
 <div class="container table-responsive">
     <div class="d-flex justify-content-between">
-        <h1>Tabla Libros</h1>
+        <h1>Tabla Carrera</h1>
         <button type="button" class="btn btn-outline-secondary bi bi-arrow-left-right" (click)="cambiarVista()"></button>
     </div>
     <div class="d-flex justify-content-center mb-2">
-        <button type="button" class="btn btn-success bi bi-plus" data-bs-toggle="modal" data-bs-target="#form" (click)="isUpdate=false"></button>
+        <button type="button" class="btn btn-success bi bi-plus" data-bs-toggle="modal" data-bs-target="#form" (click)="mostrarModal()"></button>
     </div>
     <table class="table" *ngIf="mostrarTabla">
         <thead class="table-dark">
@@ -20,10 +20,9 @@
         <tbody class="table-group-divider">
         <tr *ngFor="let carrera of carreras; let i = index">
             <th scope="row">{{ i + 1 }}</th>
-            <!-- <td>{{seccion.idSeccion}}</td> -->
             <td>{{carrera.nombre}}</td>
             <td>{{carrera.estado}}</td>
-            <td>{{ carrera.id_facultad ? carrera.id_facultad.id_facultad : 'Sin categoría' }}</td>
+            <td>{{ carrera.id_facultad ? carrera.id_facultad.nombre : 'Sin categoría' }}</td>
             <td>
                 <button type="button" class="btn btn-outline-success mx-2 bi bi-pencil-fill" (click)="selectCarrera(carrera)" data-bs-toggle="modal" data-bs-target="#form"></button>
                 <button type="button" class="btn btn-outline-danger bi bi-archive" (click)="eliminarCarrera(carrera.id_carrera)"></button>
@@ -86,7 +85,7 @@
             </form>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="resetFormCarrera()">Close</button>
+            <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="resetFormCarrera()">Cerrar</button>
             <button type="button" class="btn btn-primary" (click)="crearCarrera()" *ngIf="!isUpdate" data-bs-dismiss="modal">Agregar</button>
             <button type="button" class="btn btn-success" (click)="actualizarCarrera()" *ngIf="isUpdate" data-bs-dismiss="modal">Actualizar</button>
         </div>
