--- a/src/app/componentes/sidevar/sidevar.component.html
+++ b/src/app/componentes/sidevar/sidevar.component.html
@@ -1,4 +1,4 @@
-<!--<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand">UPeU</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +23,7 @@
     </div>
   </nav>
   -->
-  <div class="card flex">
+  <!-- <div class="card flex">
     <p-sidebar #sidebarRef [(visible)]="sidebarVisible">
         <ng-template pTemplate="headless">
             <div class="flex flex-column h-full">
@@ -110,4 +110,4 @@
         </ng-template>
     </p-sidebar>
     <p-button (onClick)="sidebarVisible = true" icon="pi pi-arrow-right" class="mb-3"></p-button>
-    </div>
+    </div> -->
